<resources>
    <string name="app_name">whatsup</string>


    <string name="permission_required_toast">Please permit location in the app</string>
    <string name="location_permission_denied">Location service was denied by user</string>
    <string name="permission_rationale_location">Permission rationale location ?</string>

    <string name="title_activity_maps">Map</string>
    <string name="send">send message</string>

    <string name="username">E-mail</string>
    <string name="password">Password</string>
    <string name="reenter_password">Reenter password</string>
    <string name="remember_me">remember me</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>

    <string name="create">create</string>

    <string name="text">Text</string>
    <string name="message_title">Title:</string>
    <string name="message_nickname">Nickname:</string>
    <string name="message_tag">Tag:</string>
    <string name="send_message">send</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_message">title</string>
    <string name="title_activity_send_message">SendMessageActivity</string>

    <string name="message_detail">detail</string>

    <string name="message">message</string>
    <string name="title_activity_message_list">MessageListActivity</string>
</resources>
