<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.map.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/toolbarColor"
        android:textColor="?attr/android:textColorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/text"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.3">

            <ImageView
                android:id="@+id/login__map"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent">

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.lenovo.map.LoginActivity">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edt_login_email"
            android:hint="@string/username"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edt_login_password"
            android:hint="@string/password"
            android:shadowColor="#00ff00ff"
            android:layout_below="@+id/edt_login_email"
            android:layout_alignStart="@+id/edt_login_email"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_login_password"
            android:id="@+id/chbox_login_remember"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/chbox_login_remember"
            android:layout_below="@id/edt_login_password"
            android:text="@string/remember_me"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/btn_login"
            android:layout_below="@+id/chbox_login_remember"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignStart="@+id/edt_login_password"
            android:layout_alignEnd="@+id/edt_login_password"
            android:background="@drawable/button_green_background"
            android:textColor="#fafefc"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/btn_register"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignStart="@+id/btn_login"
            android:layout_alignEnd="@+id/btn_login"
            android:background="@drawable/button_gray_background"
            android:textColor="#262c2a"
            />
    </RelativeLayout>

</LinearLayout>
