<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.map.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/toolbarColor"
        android:textColor="?attr/android:textColorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
		>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/text"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textColor="#fafefc"
            />
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.3">

            <ImageView
                android:id="@+id/register_map"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent">

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.lenovo.map.RegisterActivity">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edt_username"
        android:hint="@string/username"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edt_password"
        android:hint="@string/password"
        android:shadowColor="#00ff00ff"
        android:layout_below="@+id/edt_username"
        android:layout_alignStart="@+id/edt_username"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edt_reenter_password"
            android:hint="@string/reenter_password"
            android:shadowColor="#00ff00ff"
            android:layout_below="@+id/edt_password"
            android:layout_alignStart="@+id/edt_username"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/btn_create"
        android:layout_below="@+id/edt_reenter_password"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignStart="@+id/edt_password"
        android:layout_alignEnd="@+id/edt_password"
        android:background="@drawable/button_green_background"
        android:textColor="#fafefc" />
    </RelativeLayout>
</LinearLayout>
