<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.lenovo.map.SendMessageActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_send"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#292929"
        android:textColor="?attr/android:textColorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@android:drawable/ic_menu_revert">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/text"
            android:textSize="23sp"
            android:textStyle="bold"
            android:text="@string/text"
            android:textColor="#fafefc"
            />
    </android.support.v7.widget.Toolbar>


    <EditText
        android:id="@+id/edt_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar_send"
        android:enabled="true"
        android:ems="10"
        android:hint="@string/title_message"
        android:inputType="text"
        android:scrollbars="vertical"
        android:gravity="top|left"
        />
    <EditText
        android:id="@+id/edt_message"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_below="@id/edt_title"
        android:enabled="true"
        android:inputType="textMultiLine"
        android:minLines="8"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:background="@android:drawable/edit_text"
        android:gravity="top|left"
        />
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@id/edt_message">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/send_message"
            android:id="@+id/btn_send"
            android:layout_alignParentStart="true"
            android:background="@drawable/button_blue_background"
            android:textColor="#fafefc"
            />
    </RelativeLayout>
</RelativeLayout>
